# ml-uplift

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  proto.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.streamlit/: secrets.toml
data/: after.xlsx  original.xlsx
models/aba/: aba_lgb_001.joblib  aba_lgb_002.joblib  aba_lgb_003.joblib  aba_xgb_001.joblib
models/svp/: svp_rfr_001.joblib  svp_rfr_002.joblib  svp_xgb_001.joblib
scripts/: add_to_full_promo.py  predict.py  prepare.py  preprocess.py
src/: auth.py  model.py  overview.py  settings.py
utils/: azure.py
var/: callables.py
